// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component 1`] = `
<Fragment>
  —
</Fragment>
`;

exports[`should render loaded component 1`] = `
<Fragment>
  <QualifierIcon
    className="little-spacer-right"
    qualifier="FIL"
  />
  src/foo.js
</Fragment>
`;
